# spimex_parser

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  run.sh
src/: main.py
src/core/: config.py
src/database/: db.py
src/migrations/: env.py
src/migrations/versions/: 5f1c89d5463e_using_timezone_true.py  a5caf78ed0c8_initial2.py  bd4be100819e_create_table_spimex_tranding.py  fa6d415a5835_create_table.py
src/models/: base.py  spimex_trading_result.py
src/parsers/: base.py  excel_parser.py  page_parser.py
src/repositories/: spimex_repo.py
src/schemas/: trading_result.py
src/services/: spimex_services.py
