[project]
name = "spimex-parser"
version = "0.1.0"
description = ""
authors = [{ name = "Maniakalochka", email = "prochorwolochoff@gmail.com" }]
license = { text = "None" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["black (>=25.1.0,<26.0.0)", "isort (>=6.0.1,<7.0.0)", "requests (>=2.32.4,<3.0.0)", "beautifulsoup4 (>=4.13.4,<5.0.0)", "pydantic-settings (>=2.10.1,<3.0.0)", "pandas (>=2.3.0,<3.0.0)", "dotenv (>=0.9.9,<0.10.0)", "sqlalchemy (>=2.0.41,<3.0.0)", "psycopg2 (>=2.9.10,<3.0.0)", "lxml (>=5.4.0,<6.0.0)", "openpyxl (>=3.1.5,<4.0.0)", "xlrd (>=2.0.2,<3.0.0)", "alembic (>=1.16.2,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
